@@ -5,6 +5,6 @@ include $(TOPDIR)/Preamble.make
 DIST_FILES =				\
 	oracleasm-2.4.9-e.spec.in	\
 	oracleasm-2.4.21-EL.spec.in	\
-	oracleasm.init
+	oracleasm.init.in
 
 include $(TOPDIR)/Postamble.make
