@@ -5,6 +5,7 @@
 # Macros
 # This one is hardcoded because, well, it belongs there
 %define _prefix /usr
+%define libdir /usr/lib
 
 # Turn on's and off's (summit and debug not used but added
 # for future proofing)
@@ -243,8 +244,8 @@ mkdir -p $RPM_BUILD_ROOT/etc/init.d
 cp -f vendor/redhat/oracleasm.init $RPM_BUILD_ROOT/etc/init.d/oracleasm
 mkdir -p $RPM_BUILD_ROOT/etc/sysconfig
 cp -f vendor/common/oracleasm.sysconfig $RPM_BUILD_ROOT/etc/sysconfig/oracleasm
-mkdir -p $RPM_BUILD_ROOT/usr/lib/oracleasm
-cp -f vendor/common/oracleasm.init.functions $RPM_BUILD_ROOT/usr/lib/oracleasm/oracleasm.init.functions
+mkdir -p $RPM_BUILD_ROOT%{libdir}/oracleasm
+cp -f vendor/common/oracleasm.init.functions $RPM_BUILD_ROOT%{libdir}/oracleasm/oracleasm.init.functions
 
 if [ "%{_lib}" = "lib64" ]
 then
@@ -325,7 +326,7 @@ chkconfig oracleasm on
 /usr/sbin/asmtool
 /etc/init.d/oracleasm
 /etc/sysconfig/oracleasm
-/usr/lib/oracleasm/oracleasm.init.functions
+%{libdir}/oracleasm/oracleasm.init.functions
 
 
 %changelog
