@@ -13,13 +13,16 @@
 
 # Force LC_ALL=C
 export LC_ALL=C
-
+ 
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
 
 # Source init.d functions
 . /etc/init.d/functions
 
 # Source common functions
-. /usr/lib/oracleasm/oracleasm.init.functions
+. ${libdir}/oracleasm/oracleasm.init.functions
 
 # Source configuration
 [ -f /etc/sysconfig/oracleasm ] && . /etc/sysconfig/oracleasm
